docs/_static/conf/scss/main-2026.scss
/* ... */
.uk-container {
    h2 {
        text-align: center;
        width: 100%;
    }
}

body .uk-button.uk-button-ghost {
    background: transparent;
    border: 1px solid $white;
    border-radius: 6px;
    padding-left: 30px;
    padding-right: 30px;
    padding-bottom: 0px;
    padding-top: 0px;
}

body .header-logo, body .header-logo a:hover, body .header-logo a:visited, body .header-logo a:active, body .header-logo a {
    font-family: bree serif;
    text-transform: uppercase;
    text-align: right;
    text-decoration: none;
    font-size: 24px;
    line-height: 1;
    color: $font-black !important;
    text-decoration: none;

    em {
        color: $main-color;
        font-style: normal;
        font-size: 16px;
        position: relative;
        top: -8px;
    }
}

body div.mobile-post-header {
    display: flex;
    justify-content: center;
    padding-top: 24px;
    padding-bottom: 20px;
}

.header {
    background-color: $main-color;
}

body .page-banner {
    display: grid;
    align-content: end;
    box-sizing: border-box;
    padding-bottom: 2rem;
    height: 184px;
    width: 100%;
    background-size: cover;
    // box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.5);

    .uk-container {
        position: relative;
        width: 90%;

        h1 {
            color: $white;
            font-family: $secondary-font-family;
            // position: absolute;
            // top: 108px;
            font-size: 26px;
        }
    }
}

body .page-content {
    padding-top: 36px;

    a:not(.headerlink), a:active:not(.headerlink), a:visited:not(.headerlink), a:link:not(.headerlink) {
        border-bottom: 1px dashed $header-color;
        color: $header-color;
        text-decoration: none;
    }

    a:hover:not(.headerlink) {
        border-bottom: 1px solid $main-color;
        text-decoration: none;
    }

    a.headerlink {
        color: #fff;
    }

    a.headerlink:hover {
        color: rgb(68, 68, 68);
        background: rgb(234, 234, 234);
    }


    h1, h2, h3, h4, h5, h6 {
        text-align: left;
    }

    .ticket {
        padding: 24px 36px;
        background-color: #EFEFED;
        border: 2px solid #FFD700;
        margin-top: 36px;
        border-radius: 3px;
        margin-top: 20px;

        a.headerlink, a.headerlink:visited {
            padding-left: 10px;
            color: #FFD700;
        }

        h2 {
            font-family: $secondary-font-family;
            margin-bottom: 10px;
            margin-top: 10px;
            color: #333333;

            strong {
                font-weight: regular;
                color: #333333;
            }

            em {
                font-style: normal;
                color: #333333;
            }

            // a.headerlink {}
         }

         h2, p {
             text-align: left;
             color: #333333;
         }

         p {
             font-weight: $semi-bold
         }
    }

    .schedule {
        background-color: #E8DDCF;
        padding: 24px;
        border: #CEBEA9 1px solid;
        border-radius: 4px;
        margin: 20px auto;

        &-header {
            font-family: $secondary-font-family;
            font-size: 20px;
            padding-bottom: 20px;
            margin-bottom: 20px;
            border-bottom: #BEB2A0 2px solid;
        }

        &-item {
            display: flex;
            border-bottom: 1px solid #BEB2A0;
            padding-bottom: 10px;
            margin-bottom: 10px;

            .item-starting-time {
                width: 100px;
                padding-right: 16px;
                font-weight: $bold;
            }

            .item-speaker {
                font-weight: $light;
            }

            .item-speaker-picture {
                display: none;
            }

            .item-content {
                max-width: 350px;
            }
        }
    }

    .talk {
        background-color: #E8DDCF;
        padding: 24px;
        border: #CEBEA9 1px solid;
        border-radius: 4px;
        margin: 20px auto;

        .speaker-info {
            display: flex;
            border-bottom: 2px solid #beb2a0;
            margin-bottom: 20px;
            padding-bottom: 20px;



            & > img {
                width: 40px;
                height: 40px;
                border-radius: 20px;
                margin-right: 10px;
            }

            .speaker-contact-info {
                position: relative;
                top: -6px;

                .speaker-name {
                    font-family: $secondary-font-family;
                    font-size: 20px;
                    margin-bottom: 0px;
                }

                ul {
                    li {
                        display: inline-block;
                        padding-left: 0;
                        padding-right: 8px;
                        line-height: 0.1;

                        &:before {
                            content: "";
                        }

                        .twitter {
                            width: 24px;
                        }

                        .webpage {
                            height: 22px;
                        }

                        .github {
                            height: 22px;
                        }
                    }
                }
            }
        }

        .talk-content .talk-title {
            margin-bottom: 4px;
        }
        .talk-content .talk-description ul li:before {
            color: #4a4a4a;
        }
    }
}
/* ... */

